@@ -25,9 +25,12 @@ this function is to be used within Shiny applications with \code{renderUI()}.
 For Word (docx) output, if pandoc version >= 2.0 is used, a raw XML block
 with the table code will be inserted. If pandoc version < 2.0 is used, an
 error will be raised. Note also that insertion of images is not supported
-with rmarkdow for Word documents. Result can be aligned with
-chunk option \code{ft.align} that accepts values 'left', 'center'
-and 'right'.
+with rmarkdow for Word documents.
+
+Result can be aligned with chunk option \code{ft.align} that
+accepts values 'left', 'center' and 'right'.
+Word option 'Allow row to break across pages' can be
+activated with chunk option \code{ft.split} set to TRUE.
 }
 \author{
 Maxim Nazarov
